style: modification fond et couleur/ajout d'images

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,26 @@
 
-html{
-    background: rgb(2,0,36);
-background: -moz-linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
-background: -webkit-linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
-background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#020024",endColorstr="#00d4ff",GradientType=1);
+body{
+    background-image: url("../image/theme_clair.jpg"); 
+    background-repeat: no-repeat;
+    background-size: 100%;
+    height: auto;
+    width: auto;
+}
+
+h1{
+    color: aliceblue;
+}
+
+p{
+    color: aliceblue;
+}
+
+button{
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+#codePostalInput{
+    margin-left: 10px;
+    margin-right: 10px;
 }
