style: ajout de fond et script de  changement de fonds

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body{
     background: url("../image/theme_clair.jpg") no-repeat fixed;
     background-size: cover;
     text-align: center;
-
+    background-color: black;
 }
 
 h1{
@@ -30,4 +30,8 @@ button{
 
 .cache{
     display: none;
+}
+
+.sombre{
+    color: black;
 }
