--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;500&family=Roboto:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@300&display=swap');
 
 
 body{
@@ -6,7 +6,7 @@ body{
     background-size: cover;
     text-align: center;
     background-color: black;
-    font-family: 'Young Serif', serif;
+    font-family: 'Heebo', sans-serif;
     border-image: 10px solid black;
 }
 
@@ -14,13 +14,13 @@ h1{
     color: aliceblue;
     text-align: center;
     font-size: 500%;
-    font-family: 'Young Serif', serif;
+    font-family: 'Heebo', sans-serif;
 }
 
 button{
     margin: 10px;
     font-size: large;
-    font-family: 'Young Serif', serif;
+    font-family: 'Heebo', sans-serif;
 }
 
 
@@ -51,12 +51,13 @@ button{
     margin-top: 10px;
     margin-right: 5.5%;
     font-size: large;
-    font-family: 'Young Serif', serif;
+    font-family: 'Heebo', sans-serif;
 }
 
 #codePostalInput{
-    font-size: large;
-    font-family: 'Young Serif', serif;
+    font-size: medium;
+    font-family: 'Heebo', sans-serif;
+    width: 11%;
 
 }
 
