--- a/css/style.css
+++ b/css/style.css
@@ -63,35 +63,42 @@ button{
 
 #nuage{
     color: #2b3a55;
-    
+    font-size: 250%;
 }
 
 #pluie{
     color: #2b3a55;
+    font-size: 250%;
 }
 
 #neige{
     color: #2b3a55;
+    font-size: 250%;
 }
 
 #vent{
     color: #2b3a55;
+    font-size: 250%;
 }
 
 #grele{
     color: #2b3a55;
     max-width: 40px;
+    font-size: 250%;
 }
 
 #soleil{
     color: #ffdd00;
+    font-size: 250%;
 }
 
 #brume{
     color: #2b3a55;
     max-width: 40px;
+    font-size: 250%;
 }
 
 #orage{
     color: #ffeb0a;
+    font-size: 250%;
 }
